--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,12 @@
-login
+<h1>Driver Login</h1>
+<p>Please login as a driver</p>
+
+<form>
+	Phone Number:
+	<input type="text" name="driver_number"> <br>
+
+	Password:
+	<input type="text" name="driver_password"> <br>
+
+	<input type="submit" value="Login">
+</form>
