--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,12 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="stylesheet/bootstrap/dist/css/bootstrap.min.css">
+    <script src="scripts/jquery/dist/jquery.min.js"></script>
+    <script src="stylesheets/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     {{{body}}}
