--- a/views/confirmation.hbs
+++ b/views/confirmation.hbs
@@ -1,1 +1,41 @@
-confirmed
+<h1>We've confirmed your ride!</h1>
+You should receive a text at {{phone_number}} very soon.
+
+<p>
+	Here's the information we got: <br>
+	Name: {{name}} <br>
+	Address: {{address}} <br>
+	Number of Passengers: {{num_passengers}} <br>
+</p> 
+
+
+
+  <head>
+    <style>
+      #map {
+        height: 800px;
+        width: 100%;
+       }
+    </style>
+  </head>
+  <body>
+    <h3>Your pickup location:</h3>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {{google_location}};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 17,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe5Owcj0cRZ6QeR8XHsJOIdsTvvpTbuyU&callback=initMap">
+    </script>
+  </body>
+ 
