--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,40 @@
-register
+<h1>Driver Registration</h1>
+<p>Welcome to {{title}}, please fill out the information below to register as a driver.</p>
+
+<form>
+	First:
+	<input type="text" name="driver_first">
+
+	Last:
+	<input type="text" name="driver_last"> <br>
+
+  Password:
+  <input type="text" name="driver_pass"> <br>
+  Confirm Password:
+  <input type="text" name="driver_confirm"> <br>
+
+  Phone Number:
+  <input type="text" name="driver_phone"> <br>
+
+  License Number:
+  <input type="text" name="driver_license"> <br>
+
+  Car Model:
+  <input type="text" name="car_model">
+
+  Car Size:
+  <select name="car_size">
+		<option value="1"> 1 </option>
+		<option value="2"> 2 </option>
+		<option value="3"> 3 </option>
+		<option value="4"> 4 </option>
+		<option value="5"> 5 </option>
+    <option value="5"> 6 </option>
+    <option value="5"> 7 </option>
+    <option value="5"> 8 </option>
+    <option value="5"> 9 </option>
+    <option value="5"> 10 </option>
+	</select> <br>
+
+	<input type="submit" value="Register">
+</form>
