--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
+<div class="centered">
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}, please request a ride below.</p>
 
@@ -22,3 +23,4 @@
 
 	<input type="submit">
 </form>
+</div>
