--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
     <script src="scripts/jquery/dist/jquery.min.js"></script>
     <script src="stylesheets/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
-  <body>
+  <body bgcolor="#98FB98">
     {{{body}}}
   </body>
 </html>
