began adding passport functionality to login

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,12 +1,12 @@
 <h1>Driver Login</h1>
-<p>Please login as a driver</p>
+<p>Please log in as a driver</p>
 
-<form>
-	Phone Number:
-	<input type="text" name="driver_number"> <br>
+<form action="/login" method="post">
+	Username:
+	<input type="text" name="username"> <br>
 
 	Password:
-	<input type="text" name="driver_password"> <br>
+	<input type="password" name="password"> <br>
 
-	<input type="submit" value="Login">
+	<input type="submit" value="Log In">
 </form>
