--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,9 @@
 body {
   background-color: #FFFFFF;
-  background-image: 'background.jpg';
-  padding: 50px;
+  padding-left: 125px;
+  padding-right: 125px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
