--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,7 +1,10 @@
 body
   background-color: #FFFFFF
-  background-image: 'background.jpg'
-  padding: 50px
+  // background-image: url('../images/background.jpg')
+  padding-left: 125px
+  padding-right: 125px
+  padding-top: 50px
+  padding-bottom: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
