--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -13,8 +13,10 @@
   </head>
   <body>
     {{> header}}
-    <div class="container">
+    <div class="container-fluid">
       {{{body}}}
     </div>
+
   </body>
+
 </html>
