added text messaging

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -30,11 +30,11 @@
 </nav>
 
 <h2>Driver Registration</h2>
-<p>Welcome to {{title}}, please fill out the information below to register as a driver.</p>
+<p>Please fill out the information below to register as a driver.</p>
 
 <form>
 
-	<input type="text" name="firstName" class="form-control" placeholder="First Name">
+	<input type="text" name="firstName" class="form-control" placeholder="First Name"> <br>
 
 
 	<input type="text" name="lastName" class="form-control" placeholder="Last Name"> <br>
@@ -49,10 +49,10 @@
   <input type="text" name="carLicensePlate" class="form-control" placeholder="License Plate Number"> <br>
 
 
-  <input type="text" name="carMake" class="form-control" placeholder="Car Make">
+  <input type="text" name="carMake" class="form-control" placeholder="Car Make"> <br>
 
 
-  <input type="text" name="carModel" class="form-control" placeholder="Car Model">
+  <input type="text" name="carModel" class="form-control" placeholder="Car Model"> <br>
 
 
   <input type="text" name="carColor" class="form-control" placeholder="Car Color"> <br>
@@ -69,7 +69,7 @@
     <option value="5"> 8 </option>
     <option value="5"> 9 </option>
     <option value="5"> 10 </option>
-	</select> <br>
+</select> <br> <br>
 
-	<input type="submit" value="Register">
+	<input type="submit" class="btn btn-primary" value="Register">
 </form>
