fixed some spaccing with the layout

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,14 +47,14 @@
 
 	<input type="text" name="address" class="form-control" placeholder="Address"> <br>
 
-	Number of Passengers: <br>
-	<select name="num_passengers">
+	Number of Passengers: <br><br>
+	<select name="num_passengers"> 
 		<option value="1"> 1 </option>
 		<option value="2"> 2 </option>
 		<option value="3"> 3 </option>
 		<option value="4"> 4 </option>
 		<option value="5"> 5 </option>
-	</select> <br>
+	</select> <br> <br>
 
 
 	<input type="text" name="passenger_phone_num" class="form-control" placeholder="Phone Number: (So we can message you when we arrive!)"> <br>
