--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,64 +1,91 @@
-<div class="row">
+<div class="container">
+    <div class="row">
 
-		<div class="col-md-4">
-			<h1>{{title}}</h1>
-		</div>
+    		<div class="col-md-4">
+    			<h1>{{title}}</h1>
+    		</div>
 
 
-</div>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="../">Event A</a>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="../">Event A</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Driver Register/Sign-in <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="../register">Register</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="../login">Sign-in</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
         </div>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+    <div class="row">
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Driver Register/Sign-in <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="../register">Register</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="../login">Sign-in</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+        <div class="col-md-12">
+            <p>Welcome to {{title}}, please request a ride below.</p>
+        </div>
+    </div>
 
-<div class="centered">
+    <div class="row">
+        <form action="/confirmation" method="post">
 
-<p>Welcome to {{title}}, please request a ride below.</p>
+        	<div class="col-md-6">
+                <input type="text" name="passenger_name" class="form-control" placeholder="First Name"> <br>
+            </div>
 
-<form action="/confirmation" method="post">
+            <div class="col-md-6">
+                <input type="text" name="passenger_name" class="form-control" placeholder="Last Name"> <br>
+            </div>
 
-	<input type="text" name="passenger_name" class="form-control" placeholder="Name"> <br>
+        	<div class="col-md-12">
+                <input type="text" name="address" class="form-control" placeholder="Address"> <br>
+            </div>
+
+            <div class="form-group">
+                <label for="num_passengers" class="col-md-2 control-label">
+                    Number of Passengers:
+                </label>
+                <div class="col-md-10">
+                	<select id="num_passengers" class="form-control"> 
+                		<option value="1"> 1 </option>
+                		<option value="2"> 2 </option>
+                		<option value="3"> 3 </option>
+                		<option value="4"> 4 </option>
+                		<option value="5"> 5 </option>
+                	</select> <br>
+                </div>
+            </div>
 
 
-	<input type="text" name="address" class="form-control" placeholder="Address"> <br>
+        	<div class="col-md-12">
+                <input type="text" name="passenger_phone_num" class="form-control" placeholder="Phone Number: (So we can message you when we arrive!)"> <br>
+            </div>
 
-	Number of Passengers: <br><br>
-	<select name="num_passengers"> 
-		<option value="1"> 1 </option>
-		<option value="2"> 2 </option>
-		<option value="3"> 3 </option>
-		<option value="4"> 4 </option>
-		<option value="5"> 5 </option>
-	</select> <br> <br>
-
-
-	<input type="text" name="passenger_phone_num" class="form-control" placeholder="Phone Number: (So we can message you when we arrive!)"> <br>
-
-	<input type="submit">
-</form>
+        	<div class="col-md-12">
+                <input type="submit">
+            </div>
+        </form>
+    </div>
 </div>
