--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,10 +1,6 @@
 body
   background-color: #FFFFFF
   // background-image: url('../images/background.jpg')
-  padding-left: 125px
-  padding-right: 125px
-  padding-top: 50px
-  padding-bottom: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
@@ -12,3 +8,11 @@ a
 
 #1caead
     background-color: #1caead
+
+.form-group label.control-label
+	color: #555
+	font-size: 14px
+
+.form-group .form-control
+	color: rgba(85,85,85,.6)
+
