--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,43 +1,68 @@
-<h1>DriveSpoke</h1>
-
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="../">Event A</a>
+<div class="container">
+    <div class ="row">
+        <div class="col-md-4">
+                <h1>DriveSpoke</h1>
         </div>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+    <div class="row">
+        <div class="col-md-12">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="../">Event A</a>
+                    </div>
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Not Yet Driver? <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="../register">Register</a></li>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
 
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Not Yet Driver? <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="../register">Register</a></li>
 
-<h2>Driver Sign-in</h2>
-<p>Please login as a driver</p>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+        </div>
+    </div>
 
-<form>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Driver Sign-in</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <p>Please login as a driver.</p>
+        </div>
+    </div>
 
-	<input type="text" name="username" class="form-control" placeholder="Username"> <br>
+    <div class="row">
+        <form>
 
+        	<div class="col-md-12">
+                <input type="text" name="username" class="form-control" placeholder="Username"> <br>
+            </div>
 
-	<input type="text" name="password" class="form-control" placeholder="Password"> <br>
+        	<div class="col-md-12">
+                <input type="text" name="password" class="form-control" placeholder="Password"> <br>
+            </div>
 
-	<input type="submit" value="Log In">
-</form>
+        	<div class="col-md-12">
+                <input type="submit" value="Log In">
+            </div>
+        </form>
+    </div>
+</div>
