--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,75 +1,111 @@
-<h1>DriveSpoke</h1>
-
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="../">Event A</a>
+<div class="container">
+    <div class ="row">
+        <div class="col-md-4">
+                <h1>DriveSpoke</h1>
         </div>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="../">Event A</a>
+                </div>
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Already Driver? <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="../login">Sign-in</a></li>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
 
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Already Driver? <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="../login">Sign-in</a></li>
+
+                            </ul>
+                        </li>
                     </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+      </div>
+    </div>
 
-<h2>Driver Registration</h2>
-<p>Please fill out the information below to register as a driver.</p>
+<div class="row">
+  <div class="col-md-12">
+      <h2>Driver Registration</h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+      <p>Please fill out the information below to register as a driver.</p>
+  </div>
+</div>
 
-<form>
+<div class="row">
+  <form>
 
-	<input type="text" name="firstName" class="form-control" placeholder="First Name"> <br>
+  	<div class="col-md-6">
+      <input type="text" name="firstName" class="form-control" placeholder="First Name"> <br>
+    </div>
 
+    <div class="col-md-6">
+  	 <input type="text" name="lastName" class="form-control" placeholder="Last Name"> <br>
+    </div>
 
-	<input type="text" name="lastName" class="form-control" placeholder="Last Name"> <br>
+    <div class="col-md-12">
+      <input type="text" name="username" class="form-control" placeholder="Username"> <br>
+    </div>
 
+    <div class="col-md-12">
+      <input type="text" name="password" class="form-control" placeholder="Password"> <br>
+    </div>
 
-  <input type="text" name="username" class="form-control" placeholder="Username"> <br>
+    <div class="col-md-6">
+      <input type="text" name="carMake" class="form-control" placeholder="Car Make"> <br>
+    </div>
 
+    <div class="col-md-6">
+      <input type="text" name="carModel" class="form-control" placeholder="Car Model"> <br>
+    </div>
 
-  <input type="text" name="password" class="form-control" placeholder="Password"> <br>
+    <div class="col-md-6">
+      <input type="text" name="carColor" class="form-control" placeholder="Car Color"> <br>
+    </div>
 
+    <div class="col-md-6">
+      <input type="text" name="carLicensePlate" class="form-control" placeholder="License Plate Number"> <br>
+    </div>
 
-  <input type="text" name="carLicensePlate" class="form-control" placeholder="License Plate Number"> <br>
+    <div class="form-group">
+      <label for="maxPassengers" class="col-md-1 control-label">
+          Car Size:
+      </label>
+      <div class="col-md-11">
+        <select id="maxPassengers" class="form-control">
+      		<option value="1"> 1 </option>
+      		<option value="2"> 2 </option>
+      		<option value="3"> 3 </option>
+      		<option value="4"> 4 </option>
+      		<option value="5"> 5 </option>
+          <option value="5"> 6 </option>
+          <option value="5"> 7 </option>
+          <option value="5"> 8 </option>
+          <option value="5"> 9 </option>
+          <option value="5"> 10 </option>
+        </select> <br> <br>
+      </div>
+    </div>
 
-
-  <input type="text" name="carMake" class="form-control" placeholder="Car Make"> <br>
-
-
-  <input type="text" name="carModel" class="form-control" placeholder="Car Model"> <br>
-
-
-  <input type="text" name="carColor" class="form-control" placeholder="Car Color"> <br>
-
-  Car Size:
-  <select name="maxPassengers">
-		<option value="1"> 1 </option>
-		<option value="2"> 2 </option>
-		<option value="3"> 3 </option>
-		<option value="4"> 4 </option>
-		<option value="5"> 5 </option>
-    <option value="5"> 6 </option>
-    <option value="5"> 7 </option>
-    <option value="5"> 8 </option>
-    <option value="5"> 9 </option>
-    <option value="5"> 10 </option>
-</select> <br> <br>
-
-	<input type="submit" class="btn btn-primary" value="Register">
-</form>
+  	<div class="col-md-12">
+      <input type="submit" class="btn btn-primary" value="Register">
+    </div>
+  </form>
+</div>
