--- a/views/driver-dashboard.hbs
+++ b/views/driver-dashboard.hbs
@@ -1,28 +1,115 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="../">DriveSpoke</a>
+<div class="row">
+    <div class="col-xs-12">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="../">DriveSpoke</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Driver Management <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/logout">Logout</a></li>
+
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+</div>
+</div>
+<div class = "row">
+    <div class="col-xs-12">
+        <div class="container-fluid">
+            <div class="row" id="requests-list">
+
+            </div>
         </div>
+    </div>
+</div>
+<div class="modal fade" id="request-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="request-modal-label"></h4>
+            </div>
+            <div class="modal-body">
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="ride-accept" class="btn btn-primary">Accept Ride</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Driver Management <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Logout</a></li>
+<script>
+    $(document).ready(function() {
+        var user = "{{ user._id }}";
+        var socket = io('//localhost:3000');
+        console.log('hello1');
+        //socket.emit('join', user);
+        socket.emit('get-requests', user, function(message) {
+            console.log(message);
+            $.each(message, function(requestidentifier) {
+                var request = message[requestidentifier];
+                var dateCreated = new Date(request.dateCreated);
+                var dateDiff = (new Date) - dateCreated;
+                var panelType = 'panel-defult';
+                if (dateDiff > 30 * 60000) {
+                    panelType = 'panel-danger';
+                } else if (dateDiff > 15 * 60000) {
+                    panelType = 'panel-warning';
+                } else {
+                    panelType = 'panel-success';
+                }
+                var elemString = '<dive class="col-md-3">\
+                <div data-toggle="modal" data-target="#request-modal" data-address="' + request.address + '" data-requestid="' + request._id + '" class="waitqueue-panel panel ' + panelType + '">\
+                <div class="panel-heading">' + request.address + '</div>\
+                <div class="panel-body">IMAGE HERE OF MAP</div>\
+                <div class="panel-footer">' + request.firstName + " " + request.lasName + '</div>\
+                </div>\
+                </div>';
+                $("#requests-list").append(elemString);
+            });
 
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+            // $('.waitqueue-panel').click(function() {
+            //     console.log($(this).data('requestid'));
+            // });
+        });
+
+        $('#request-modal').on('show.bs.modal', function (event) {
+            var r = $(event.relatedTarget);
+            var rid = r.data('requestid');
+            var address = r.data('address');
+            var modal = $(this);
+            modal.find('.modal-title').text('Ride request at ' + address + '.');
+            modal.find('.modal-body').text(rid);
+            modal.find('.ride-accept').data('requestid', rid);
+        });
+
+        $('.ride-accept').click(function() {
+            var rid = $(this).data('requestid');
+            socket.emit('accept-ride', { uid: user, rid: rid }, function(err) {
+                if (!err) {
+                    $('#requests-list div[data-requestid="' + rid + '"]').parent().remove();
+                    $('#request-modal').modal('toggle');
+                }
+            });
+        });
+    });
+</script>
