--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -10,6 +10,7 @@
     <script src="scripts/jquery/dist/jquery.min.js"></script>
     <script src="stylesheets/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="stylesheets/bootstrap-material-design/dist/js/material.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     {{> header}}
