--- a/views/login.hbs
+++ b/views/login.hbs
@@ -32,12 +32,12 @@
 <h2>Driver Sign-in</h2>
 <p>Please login as a driver</p>
 
-<form>
+<form action="/login" method="post">
 
 	<input type="text" name="username" class="form-control" placeholder="Username"> <br>
 
 
-	<input type="text" name="password" class="form-control" placeholder="Password"> <br>
+	<input type="password" name="password" class="form-control" placeholder="Password"> <br>
 
 	<input type="submit" value="Log In">
 </form>
