minor form fix in register.hbs

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -89,7 +89,7 @@
           Car Size:
       </label>
       <div class="col-md-11">
-        <select id="maxPassengers" class="form-control">
+        <select name="maxPassengers" id="maxPassengers" class="form-control">
       		<option value="1"> 1 </option>
       		<option value="2"> 2 </option>
       		<option value="3"> 3 </option>
