--- a/views/driver-dashboard.hbs
+++ b/views/driver-dashboard.hbs
@@ -81,7 +81,7 @@
                 <div data-toggle="modal" data-target="#request-modal" data-address="' + request.address + '" data-requestid="' + request._id + '" class="waitqueue-panel panel ' + panelType + '">\
                 <div class="panel-heading">' + request.address + '</div>\
                 <div class="panel-body">IMAGE HERE OF MAP</div>\
-                <div class="panel-footer">' + request.firstName + " " + request.lasName + '</div>\
+                <div class="panel-footer">' + request.firstName + " " + request.lastName + '</div>\
                 </div>\
                 </div>';
                 $("#requests-list").append(elemString);
