--- a/views/register.hbs
+++ b/views/register.hbs
@@ -50,7 +50,7 @@
 </div>
 
 <div class="row">
-  <form>
+  <form action="/register" method="post">
 
   	<div class="col-md-6">
       <input type="text" name="firstName" class="form-control" placeholder="First Name"> <br>
